# nvidia-free-models

./: .env.example  .gitignore  README.md  chat.py  grade_semver.py  pyproject.toml  setup.sh  vision.py
consult/: __init__.py  __main__.py  cli.py  client.py  modes.py  render.py  router.py  synth.py
